# Lifeline

./: .gitignore  Cargo.toml  README.md  deploy-instructions.md  index.html
.github/workflows/: deploy.yml
src/: event_renderer.rs  main.rs  stars.rs  timeline.rs
