[package]
name = "lifeline"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.33.3"
rfd = "0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33.3" }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
    "web_screen_reader",
] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-time = "1.1"
instant = { version = "0.1", features = ["wasm-bindgen"] }
base64 = "0.22"

[profile.release]
opt-level = 2

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
